--- a/.npmignore
+++ b/.npmignore
@@ -11,7 +11,7 @@ yarn-error.log*
 test
 tools
 docs
-miniprogram_dev
-miniprogram_dist
-node_modules
+miniprogram_dev/
+miniprogram_dist/
+node_modules/
 coverage
